// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<dropdown> demo: > render [basic] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Click Me
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-disabled" type="button" disabled="">
      <!--v-if-->Click Me
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->No Max Height <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
        <path d="M39.6 17.443 24.043 33 8.487 17.443"></path>
      </svg>
    </button>
    <!---->
  </div>
</div>
`;

exports[`<dropdown> demo: > render [button] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item">
    <div class="sd-btn-group"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if--> Publish
      </button><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-only-icon" type="button"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-more" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path fill="currentColor" stroke="none" d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path><path d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path></svg></span></button>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-btn-group"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-disabled" type="button" disabled="">
        <!--v-if--> Disabled
      </button><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-disabled sd-btn-only-icon" type="button" disabled=""><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-more" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path fill="currentColor" stroke="none" d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path><path d="M38 25v-2h2v2zM23 25v-2h2v2zM8 25v-2h2v2z"></path></svg></span></button>
      <!---->
    </div>
  </div>
  <!---->
  <div class="sd-space-item">
    <div class="sd-btn-group"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
        <!--v-if--> Publish
      </button><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal sd-btn-only-icon" type="button"><span class="sd-btn-icon"><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-down" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter"><path d="M39.6 17.443 24.043 33 8.487 17.443"></path></svg></span></button>
      <!---->
    </div>
  </div>
</div>
`;

exports[`<dropdown> demo: > render [context-menu] correctly 1`] = `
<div class="sd:flex sd:h-[300px] sd:items-center sd:justify-center sd:bg-[var(--color-fill-2)]">
  <div>Click Me</div>
</div>
`;

exports[`<dropdown> demo: > render [group] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Click Me
</button>
`;

exports[`<dropdown> demo: > render [icon] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Click Me
</button>
`;

exports[`<dropdown> demo: > render [position] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 8px; row-gap: 8px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Bottom Left
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Bottom
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Bottom Right
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Top Left
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Top
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Top Right
    </button>
    <!---->
  </div>
</div>
`;

exports[`<dropdown> demo: > render [submenu] correctly 1`] = `
<button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
  <!--v-if-->Click Me
</button>
`;

exports[`<dropdown> demo: > render [trigger] correctly 1`] = `
<div class="sd-space sd-space-horizontal sd-space-align-center" style="column-gap: 24px; row-gap: 24px;">
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Click Me
    </button>
    <!---->
  </div>
  <!---->
  <div class="sd-space-item"><button class="sd-btn sd-btn-secondary sd-btn-shape-square sd-btn-size-medium sd-btn-status-normal" type="button">
      <!--v-if-->Hover Me
    </button>
    <!---->
  </div>
</div>
`;
